--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "ccxt": "^1.38.34",
     "ts-node": "^9.0.0",
     "typescript": "^4.1.2"
+  },
+  "devDependencies": {
+    "dotenv": "^8.2.0"
   }
 }
