--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/datastore": "^6.3.1",
+    "@types/mongodb": "^3.6.3",
     "@types/node": "^14.14.10",
     "axios": "^0.21.0",
     "ccxt": "^1.38.34",
+    "dotenv": "^8.2.0",
+    "mongodb": "^3.6.3",
     "ts-node": "^9.0.0",
     "typescript": "^4.1.2"
   },
-  "devDependencies": {
-    "dotenv": "^8.2.0"
-  }
+  "devDependencies": {}
 }
