--- a/arbitrageConfig.json
+++ b/arbitrageConfig.json
@@ -1,19 +1,19 @@
 {
-    "BTC/USD": {
+    "BTC": {
         "fixedSize": true,
         "size":"50000",
         "quantity": "0.02",
         "tradeFeePercent": "0.07",
         "sendFeeCrypto": "0.001"
     },
-    "ETH/USD": {
+    "ETH": {
         "fixedSize": true,
         "size":"50000",
         "quantity": "1.1",
         "tradeFeePercent": "0.07",
         "sendFeeCrypto": "0.005"
     },
-    "XRP/USD": {
+    "XRP": {
         "fixedSize": true,
         "size":"50000",
         "quantity": "900",
