--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "arb:xrp": "npx ts-node src/arbitrage/xrp-arb.ts",
     "arb:fiat": "npx ts-node src/arbitrage/fiat-crypto-arb.ts",
     "arb": "npx ts-node src/arbitrage/start.ts",
-    "start": "echo \"Error: no test specified\" && exit 1"
+    "start": "exit 0"
   },
   "author": "",
   "license": "ISC",
