バッチリクエストのオブジェクトを作る関数を修正

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "crypro arbitrage",
   "main": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npx ts-node -r dotenv/config src/index.ts",
     "arb:xrp": "npx ts-node src/arbitrage/xrp-arb.ts",
     "arb:fiat": "npx ts-node src/arbitrage/fiat-crypto-arb.ts",
     "arb": "npx ts-node src/arbitrage/start.ts",
