--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "axios": "^0.21.0",
     "ccxt": "^1.38.34",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "googleapis": "^66.0.0",
     "mongodb": "^3.6.3",
     "ts-node": "^9.0.0",
     "typescript": "^4.1.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/express": "^4.17.9"
+  }
 }
