--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/datastore": "^6.3.1",
-    "@types/mongodb": "^3.6.3",
-    "@types/node": "^14.14.10",
     "axios": "^0.21.0",
     "ccxt": "^1.38.34",
     "dotenv": "^8.2.0",
@@ -26,6 +24,8 @@
     "typescript": "^4.1.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.9"
+    "@types/express": "^4.17.9",
+    "@types/mongodb": "^3.6.3",
+    "@types/node": "^14.14.10"
   }
 }
